SOlution fixed